Fix vertical alignment issue for `.image-inline`

--- a/mixins/image-wrapped.less
+++ b/mixins/image-wrapped.less
@@ -55,7 +55,7 @@
 	.image-wrapped {
 		width: 100%;
 
-		.image-responsive {
+		&.image-center {
 			margin: auto;
 		}
 
